--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"typescript": "^5.6.3",
 		"typescript-eslint": "^8.8.1",
 		"vite": "^5.4.8",
-		"vite-plugin-wasm-pack": "^0.1.12"
+		"vite-plugin-wasm-pack": "^0.1.12",
+		"wasm-pack": "^0.13.0"
 	},
 	"type": "module"
 }
