--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -19,17 +19,15 @@ wasm-bindgen = "0.2.84"
 # code size when deploying.
 
 console_error_panic_hook = { version = "0.1.7", optional = true }
-reqwest = { version = "0.12.8", features = ["json"] }
 serde = { version = "1.0.210", features = ["derive"] }
 wasm-bindgen-futures = "0.4.45"
 js-sys = "0.3.72"
 serde_json = "1.0.128"
 url = "2.5.2"
-web-sys = { version = "0.3.72", features = ["console"] }
+web-sys = { version = "0.3.72", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window', 'console'] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
-
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
