--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -25,6 +25,7 @@ js-sys = "0.3.72"
 serde_json = "1.0.128"
 url = "2.5.2"
 web-sys = { version = "0.3.72", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window', 'console'] }
+reqwest = { version = "0.12.8", features = ["json"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
